TestRepo2/src/objects/Diageo_Brand__c.object
<CustomObject>
    <fields>
        <fullName>API_External_ID__c</fullName>
        <description>External ID field for usage in the RecipeDB API.</description>
        <displayFormat>B-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>API External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <picklist>
            <picklistValues>
                <fullName>FALSE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TRUE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <label>Brand Category</label>
        <picklist>
            <picklistValues>
                <fullName>Blended Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cordials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rye Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schnapps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tennessee Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tequila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vodka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand_Image__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An Image Lookup that can get an Image associated with each brand via Media</description>
        <label>Brand Image</label>
        <referenceTo>Recipe_Media__c</referenceTo>
        <relationshipLabel>Recipe Brands</relationshipLabel>
        <relationshipName>Recipe_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Vodka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whisky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speciality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liqueur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tequila</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diageo_Brand_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Diageo Brand External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diageo_Brand_Tags__c</fullName>
        <label>Diageo Brand Tags</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Generic_Brand__c</fullName>
        <label>Generic Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>EN-US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EN-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT-BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EN-IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SAP_Level_3_Code__c</fullName>
        <label>SAP Level 3 Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Level_3_Descr__c</fullName>
        <label>SAP Level 3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubBrand__c</fullName>
        <label>SubBrand</label>
        <picklist>
            <picklistValues>
                <fullName>Vodka 100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Brand__c</fullName>
        <label>Sub-Brand</label>
        <picklist>
            <picklistValues>
                <fullName>AUTHENTIC JOSE CUERVO LIGHT MARGARITAS® - LIGHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTHENTIC JOSE CUERVO WATERMELON MARGARITAS®</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAILEYS® Caramel Irish Cream Liqueur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAILEYS® Coffee Irish Cream Liqueur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAILEYS® Mint Chocolate Irish Cream Liqueur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BaILEYS® Mudslide Cocktail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baileys® Original Irish Cream Liqueur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLACK HAUS® Schnapps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUCHANAN’S® Deluxe Blended Scotch Whisky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUCHANAN’S® Special Reserve Whisky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUCHANAN’S RED SEAL® Blended Scotch Whisky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BULLEIT® Bourbon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BULLEIT® Rye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulloch Lade®</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills®  1608 Irish Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills® Black Bush Irish Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills® Malt 10 Irish Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills® Malt 16 Irish Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bushmills®Malt 21 Irish Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSHMILLS® Original Irish Whiskey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caol Ila® 18 Year Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caol Ila 12® Year Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPTAIN MORGAN® Original Spiced Rum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain Morgan® Private Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain Morgan® Silver Spiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain Morgan® Tattoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain Morgan 100 Proof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain Morgan Lime Bite®</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain Morgan Long Island Iced Tea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain Morgan Parrot Bay® Coconut</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Recipe Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>API_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>Locale__c</columns>
        <columns>Generic_Brand__c</columns>
        <columns>Brand_Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recipe Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipe Brands</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>